# skillfi-stellar

./: .gitignore  README.md  TODO.md
.github/workflows/: vercel-deploy.yml
backend/: .env.example  db.js  db.json  package-lock.json  package.json  render.yaml  server.js
contracts/: Cargo.toml
contracts/funding_pool/: Cargo.toml
contracts/funding_pool/src/: lib.rs
contracts/isa_registry/: Cargo.toml
contracts/isa_registry/src/: lib.rs
contracts/repayment_distributor/: Cargo.toml
contracts/repayment_distributor/src/: lib.rs
contracts/repayment_distributor/tests/: integration.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs
docs/: architecture.md  commit_plan.md  demo_script.md  feedback-summary.md  onboarding_plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  ISACard.jsx  InvestmentModal.jsx  NavBar.jsx  RepaymentForm.jsx  SkeletonCard.jsx  WalletConnect.jsx
frontend/src/lib/: analytics.js  contracts.js
frontend/src/pages/: EarnerOnboarding.jsx  ExplorerPage.jsx  InvestorDashboard.jsx  LandingPage.jsx  RepaymentPage.jsx
